<resources>
    <string name="app_name">POWER</string>
    <string name="g1">
        1. Жим штанги лежа- лягте на скамью, возьмите штангу на ширине плеч.
Опустите штангу к груди, затем поднимите вверх, выталкивая ее силой грудных мышц сделайте 3 подхода по 10 повторений.</string>
    <string name="g2">
        2. Отжимания на брусьях -
поставьте руки на брусья  чуть шире плеч.
опуститесь вниз, сгибая руки, затем оттолкнитесь от  брусьев, поднимаясь вверх сделайте 3 подхода по 10 повторений.
</string>
    <string name="g3">
        3. Французский жим штанги - лягте на скамью, возьмите штангу в руки, вытяните их над грудью.
согните руки в локтях, опуская штангу за голову, затем поднимите обратно вверх сделайте 3 подхода по 10 повторений.

</string>
    <string name="g4">
        4. Разгибание рук в кроссовере - встаньте лицом к кроссоверу,ладони должны быть повернуты вниз или в сторону.
Начните движение, разгибая руки в локтях,движение должно быть плавным и контролируемым.
Постепенно вернитесь к исходному положению, согнув руки в локтях, но не допуская, чтобы вес блока совсем опустился сделайте 3 подхода по 10 повторений.

</string>
    <string name="g5">
 5. Разведение гантелей лежа - лягте на скамью с гантелями в руках, руки над грудью.
разведите гантели в стороны, раскрывая грудь, затем медленно вернитесь в исходное положение сделайте 3 подхода по 10 повторений.
    </string>
    <string name="b1">
1. Подтягивания- возьмите широкий хват на турнике, ладони повернуты внутрь. Подтянитесь вверх, сгибая руки, чтобы поднять корпус к турнику
        сделайте 3 подхода по 10 повторений.
    </string> <string name="b2">
      2. Тяга вертикального блока к подбородку - сядьте перед блоком, возьмите рукоятку в верхний хват.
Тяните рукоятку к подбородку, сгибая руки, затем медленно верните руки вверх сделайте 3 подхода по 10 повторений.</string>
    <string name="b3">
        3. Подьем штанги на бицепс -встаньте прямо, держа штангу в вертикальном положении перед собой, руки на ширине плеч,Поднимите штангу до максимальной концентрации бицепсов, стараясь не использовать инерцию или движение туловища,Не допускайте сгибания торса назад или вперед, сохраняйте прямую позицию тела,сделайте 3 подхода по 10 повторений
</string> <string name="b4">
    4. Сгибание рук с гантелями - сядьте на скамью, возьмите гантель в руку, опершись на колено противоположной ноги.Согните руку с гантелью в локте, поднимая ее к плечу, затем медленно опустите обратно,
сделайте 3 подхода по 10 повторений.
</string>
    <string name="b5">
       5. Пулловер с гантелей - лягте на скамью, возьмите гантель двумя руками, протяните их над грудью.Опустите гантель за голову, сохраняя слегка согнутые локти, затем поднимите обратно,
    сделайте 3 подхода по 10 повторений.
</string>
    <string name="l1">
       1. Приседания со штангой на плечах - поставьте штангу на плечи, ступни на ширине плеч,согните колени и опуститесь вниз, сохраняя спину прямой, затем поднимитесь обратно вверх,
    сделайте 3 подхода по 10 повторений.
</string>
    <string name="l2">
      2. Жим ногами на машине - сядьте на машину для жима ногами, разместите ноги на платформе на ширине плеч.
Выжмите платформу, выпрямляя ноги, затем медленно опустите платформу обратно, сделайте 3 подхода по 10 повторений.

</string>
    <string name="l3">
       3. Выпады с гантелями - сделайте шаг вперед одной ногой, опуская тело вниз, пока передняя нога не образует прямой угол в коленном суставе, а задняя нога не касается пола.
Убедитесь, что колено передней ноги находится над голеностопом.
Поднимите тело, вернувшись в исходное положение, с помощью ноги, на которую вы делали шаг вперед.
    сделайте 3 подхода по 10 повторений.
</string>
    <string name="l4">
      4. Жим гантелей сидя - Возьмите гантели в руки, поднимите их к плечам. Выталкивайте гантели вверх, выпрямляя руки, затем медленно опустите их обратно к плечам, сделайте 3 подхода по 10 повторений.
</string>
    <string name="l5">
  5. Фронтальные подъемы гантелей - стойте прямо с гантелями в руках, ладони повернуты к телу. Поднимите гантели вперед, поднимая их до уровня плеч, затем медленно опустите обратно, сделайте 3 подхода по 10 повторений.
</string>
    <string name="f11">
       1. Приседания со штангой на плечах - поставьте штангу на плечи, ступни на ширине плеч,согните колени и опуститесь вниз, сохраняя спину прямой, затем поднимитесь обратно вверх,
    сделайте 3 подхода по 10 повторений.
</string>
    <string name="f12">
      2.	Жим гантелей на скамье - лягте на спину на скамью, сгибая колени. Возьмите гантели в руки на уровне груди. Выжмите гантели вверх, выпрямляя руки.Опустите гантели к бокам тела, согнув руки в локтях,сделайте 3 подхода по 10 повторений.
</string>
    <string name="f13">
       3.Тяга штанги к подбородку - стоя на прямых ногах, возьмите штангу на ширине плеч с хватом сверху. Поднимите штангу к подбородку, сжимая лопатки вместе. Медленно опустите штангу обратно вниз,
    сделайте 3 подхода по 10 повторений.
</string>
    <string name="f14">
       4.Отжимания на брусьях - возьмите положение отжимания на брусьях с широким хватом. Опустите тело до того момента, пока грудь не коснется брусьев. Поднимитесь обратно, выпрямляя руки,
        сделайте 3 подхода по 10 повторений.
</string>
    <string name="f15">
      5.Подъем ног в висе - висните на турнике или брусьях.Поднимите ноги, сгибая их в коленях, до уровня живота.Опустите ноги обратно вниз,сделайте 3 подхода по 10 повторений.
</string>
    <string name="f21">
       1.	Тяга штанги к животу - стоя прямо, возьмите штангу в руки с прямыми ногами. Поднимите штангу к животу, сжимая лопатки вместе.Опустите штангу обратно вниз,
        сделайте 3 подхода по 10 повторений.
</string>
    <string name="f22">
      2.	Французский жим с гантелей - сядьте на скамью.Возьмите гантелю в руки над головой.Согните руки в локтях, опуская гантелю за голову.Поднимите гантелю над головой,
        сделайте 3 подхода по 10 повторений.
</string>
    <string name="f23">
       3.	Махи гантелями в стороны - стоя прямо с гантелями в руках, поднимите их в стороны до уровня плеч.Опустите гантели обратно к бедрам,сделайте 3 подхода по 10 повторений.
</string>
    <string name="f24">
       4.	Гиперэкстензии - лягте на гиперэкстензионный тренажер, закрепив ноги и бедра. Согните туловище вниз, а затем медленно поднимайтесь обратно.
        сделайте 3 подхода по 10 повторений.
</string>
    <string name="f25">
       5. Выпады с гантелями - сделайте шаг вперед одной ногой, опуская тело вниз, пока передняя нога не образует прямой угол в коленном суставе, а задняя нога не касается пола.
Убедитесь, что колено передней ноги находится над голеностопом.
Поднимите тело, вернувшись в исходное положение, с помощью ноги, на которую вы делали шаг вперед.
    сделайте 3 подхода по 10 повторений.
</string>
    <string name="f31">
      1.Отжимания - примите положение  для отжиманий, руки на ширине плеч.Опустите грудь к полу, затем поднимитесь обратно,
        сделайте 3 подхода по 10 повторений.
</string>
    <string name="f32">
      2. Махи гантелями в наклоне - наклонитесь вперед, сохраняя прямую спину и слегка согнутые в коленях ноги.
Ваши ладони  должны  быть повернуты друг к другу.
Медленно поднимите гантели в стороны вдоль линии плеч, сохраняя легкое сгибание в локтях.
Поднимите руки до уровня плеч или чуть выше, чувствуя напряжение в верхней части спины и плечах.
Медленно опустите гантели обратно к исходному положению, контролируя движение, сделайте 3 подхода по 10 повторений.
</string>
    <string name="f33">
       3. Разгибание ног в тренажере - удерживайте ручки или боковые поручни для поддержки тела.
Медленно выталкивайте платформу тренажера, разгибая ноги в коленных суставах, пока ноги не окажутся в полностью прямом положении.
Медленно опустите платформу обратно, согибая ноги, но не до конца, чтобы сохранить напряжение в квадрицепсах, сделайте 3 подхода по 10 повторений.
</string>
    <string name="f34">
      4. Пресс - лягте на спину, согните колени и поставьте стопы на пол
Положите руки за голову или перекрестно на грудь.
Сокращая мышцы пресса, поднимите плечи и верхнюю часть спины вверх.
Старайтесь приблизить грудь к коленям, сжимая мышцы пресса.Затем медленно вернитесь в исходное положение, опуская плечи на пол,сделайте 3 подхода по 10 повторений.

</string>
    <string name="f35">
       5. Кардио (бег, велосипед, скакалка)- выберите кардио-упражнение и выполните его в течение 20-30 минут с высокой интенсивностью.

</string>
</resources>