<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <TextView
        android:id="@+id/centeredText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="День 3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textSize="26sp"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/centeredText"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:id="@+id/listContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/f31"
                    android:textSize="18sp"/>

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="400dp"
                    android:layout_height="200dp"
                    android:src="@drawable/ftreone"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="120dp"

                    />

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/f32"
                    android:textSize="14sp"/>

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="400dp"
                    android:layout_height="200dp"
                    android:src="@drawable/ftretwo"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="200dp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/f33"
                    android:textSize="15sp"/>

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="400dp"
                    android:layout_height="200dp"
                    android:src="@drawable/ftretre"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="150dp"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/f34"
                    android:textSize="15sp"/>

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="400dp"
                    android:layout_height="200dp"
                    android:src="@drawable/ftrefo"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="200dp"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/f35"
                    android:textSize="18sp"/>

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="400dp"
                    android:layout_height="200dp"
                    android:src="@drawable/ftrefive"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="120dp"/>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>