<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <!-- Centered Text at the Top -->
    <TextView
        android:id="@+id/centeredText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="День 2: Спина и бицепс"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textSize="24sp"/>

    <!-- ScrollView for the List of Elements -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/centeredText"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:id="@+id/listContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Example Element 1 -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/b1"
                    android:textSize="18sp"/>

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="400dp"
                    android:layout_height="200dp"
                    android:src="@drawable/bone"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="150dp"
                    android:layout_marginEnd="10dp"
                    />

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/b2"
                    android:textSize="18sp"/>

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="400dp"
                    android:layout_height="200dp"
                    android:src="@drawable/btwo"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="150dp" />

            </RelativeLayout>
            <!-- Add more elements as needed -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/b3"
                    android:textSize="14sp"/>

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="400dp"
                    android:layout_height="200dp"
                    android:src="@drawable/btre"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="150dp"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/b4"
                    android:textSize="16sp"/>

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="400dp"
                    android:layout_height="200dp"
                    android:src="@drawable/bfo"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="150dp"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/b5"
                    android:textSize="18sp"/>

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="400dp"
                    android:layout_height="200dp"
                    android:src="@drawable/bfive"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="150dp"/>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>